# xero-python-oauth2-starter

./: app.py  pyproject.toml
templates/: base.html  code.html
