[tool.poetry]
name = "xero-python-oauth2-starter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
Flask-Session = "^0.4.0"
Flask-OAuthlib = "^0.9.6"
xero-python = "^1.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
